--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <style>
@@ -88,7 +88,7 @@
       <div class="container mt-3">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <img class="shadow rounded" src="assets/img/Mech.jpeg"alt="custom" width="500" height="700" />
+            <img class="shadow rounded" src="Mech.jpeg"alt="custom" width="500" height="700" />
           </div>
 
           <div class="col-lg-6">
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="col-lg-4 align-items-center justify-content-center">
             <div class="card p-3" style="width: 22rem;">
-              <img src="assets/img/tuneup.jpeg" class="card-img-top icon-img-box" alt="...">
+              <img src="tuneup.jpeg" class="card-img-top icon-img-box" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">Tune up</h5>
                 <p class="card-text">it takes 30 minutes because i need to cool down the engine</p>
@@ -126,7 +126,7 @@
 
           <div class="col-lg-4 align-items-center justify-content-center">
             <div class="card p-3" style="width: 22rem;">
-              <img src="assets/img/change oil.jpeg" class="card-img-top icon-img-box" alt="...">
+              <img src="change oil.jpeg" class="card-img-top icon-img-box" alt="...">
               <div class="card-body">
                 <h5 class="card-title fw-bold">Change oil</h5>
                 <p class="card-text">it takes 20 minutes to change oil .</p>
@@ -135,7 +135,7 @@
           </div>
 
           <div class="col-lg-4 align-items-center justify-content-center">
-            <div class="card p-3" style="width: 22rem;"><img src="assets/img/overhaul.jpeg" class="card-img-top icon-img-box" alt="...">
+            <div class="card p-3" style="width: 22rem;"><img src="overhaul.jpeg" class="card-img-top icon-img-box" alt="...">
 
               <div class="card-body">
                 <h5 class="card-title fw-bold">overhaul engines</h5>              
@@ -185,7 +185,7 @@
           <div class="col">
             <div class="testimonials mt-4">
               <div class="d-flex">
-                <img src="assets/img/wanggo.jpg" alt="">
+                <img src="wanggo.jpg" alt="">
                 <div class="ms-3 mb-2">
                   <h3 class="text-light">ClientName</h3>
                   <p><a href="">@clientname</a></p>
@@ -198,7 +198,7 @@
           <div class="col">
             <div class="testimonials mt-4">
               <div class="d-flex">
-                <img src="assets/img/wanggo.jpg" alt="">
+                <img src="wanggo.jpg" alt="">
                 <div class="ms-3 mb-2">
                   <h3 class="text-light">ClientName</h3>
                   <p><a href="">@clientname</a></p>
@@ -211,7 +211,7 @@
           <div class="col">
             <div class="testimonials mt-4">
               <div class="d-flex">
-                <img src="assets/img/wanggo.jpg" alt="">
+                <img src="wanggo.jpg" alt="">
                 <div class="ms-3 mb-2">
                   <h3 class="text-light">ClientName</h3>
                   <p><a href="">@clientname</a></p>
@@ -224,7 +224,7 @@
           <div class="col">
             <div class="testimonials mt-4">
               <div class="d-flex">
-                <img src="assets/img/wanggo.jpg" alt="">
+                <img src="wanggo.jpg" alt="">
                 <div class="ms-3 mb-2">
                   <h3 class="text-light">ClientName</h3>
                   <p><a href="">@clientname</a></p>
@@ -237,7 +237,7 @@
           <div class="col">
             <div class="testimonials mt-4">
               <div class="d-flex">
-                <img src="assets/img/wanggo.jpg" alt="">
+                <img src="wanggo.jpg" alt="">
                 <div class="ms-3 mb-2">
                   <h3 class="text-light">ClientName</h3>
                   <p class=""><a href="">@clientname</a></p>
@@ -250,7 +250,7 @@
           <div class="col">
             <div class="testimonials mt-4">
               <div class="d-flex">
-                <img src="assets/img/wanggo.jpg" alt="">
+                <img src="wanggo.jpg" alt="">
                 <div class="ms-3 mb-2">
                   <h3 class="text-light">ClientName</h3>
                   <p><a href="">@clientname</a></p>
@@ -273,7 +273,7 @@
         <div class="row al">
             <div class="col-md-3 col-sm-6 text-lg-start text-center">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/images/Untitled design.png" alt="Logo" height="60px">
+                    <img src="Untitled design.png" alt="Logo" height="60px">
                 </a>
                 <h5 class="mt-4">About Us</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
