--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="container mt-3">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <img class="shadow rounded" src="tip-000.webp"alt="custom" width="500" height="700" />
+            <img class="shadow rounded" src="tip-000.webp"alt="custom" />
           </div>
 
           <div class="col-lg-6">
