--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Contact</a
+              <a class="nav-link active" aria-current="page" href="#reviews"
+                >Reviews</a
               >
             </li>
           </ul>
